[package]
name = "sign-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive", "env"] }
openssl = "0.10.45"
base64 = "0.20.0"
anyhow = "1.0.68"
bincode = "2.0.0-rc.2"
